--- a/css/jackets.css
+++ b/css/jackets.css
@@ -89,6 +89,10 @@
   text-align: center;
 }
 
+.top h2 {
+  text-align: center;
+}
+
 .products__image__large {
   max-width: 100%;
 }
@@ -102,6 +106,12 @@
   border-width: 1px;
   padding: 5px;
   max-width: 955px;
+  text-align: center;
+}
+
+.product-large p, h2 {
+  text-align: left;
+  padding: 5px 0px 5px 10px;
 }
 
 .products__image_thumb {
@@ -119,6 +129,10 @@
   display: flex;
   flex-direction: column;
   padding: 5px;
+}
+
+.specific img {
+  text-align: center;
 }
 
 .add-to-cart {
