--- a/css/loading.css
+++ b/css/loading.css
@@ -16,18 +16,16 @@
     height: 25px;
     border-radius: 15px;
     border: 1px dashed black;
-    position: relative;
-    animation-duration: 1s;
+    animation-duration: 0.8s;
     animation-iteration-count: infinite;
     animation-name: load;
   }
   
   .loading-text {
     position:absolute;
-    margin: 0px auto;
     text-align: center;
     color: #fff;
-    padding-left: 10px;
+    padding: 5%;
   }
   
   @keyframes load {
