--- a/css/media.css
+++ b/css/media.css
@@ -1,6 +1,6 @@
 /* Media queries - Responsive across screen sizes */
 
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 380px) {
   .content {
     flex-direction: column;
   }
@@ -17,6 +17,7 @@
   nav {
     display: block;
     position: static;
+    height: 0vh;
   }
 
   nav a {
@@ -74,7 +75,7 @@
   flex-direction: column;
 }
 
-@media (min-width: 501px) {
+@media (min-width: 620px) {
   .content {
     flex-direction: row;
   }
@@ -92,7 +93,7 @@
   }
 }
 
-@media (min-width: 559px) {
+@media (min-width: 620px) {
   .main-content,
   .main-content-bottom {
     flex-direction: row;
@@ -114,22 +115,22 @@
     }
   }
 
-  @media (min-width: 720px) {
+  @media (min-width: 800px) {
     .main-content,
     .main-content-bottom {
       flex-direction: row;
     }
     .weekly,
     .jacket-list {
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: repeat(3, 1fr);
       display: grid;
       justify-items: center;
     }
   }
 
-  @media (min-width: 845px) {
+  @media (min-width: 945px) {
     .jacket-list {
-      grid-template-columns: repeat(6, 1fr);
+      grid-template-columns: repeat(3, 1fr);
       display: grid;
       justify-items: center;
     }
@@ -137,8 +138,16 @@
 }
 
 @media (min-width: 1300px) {
-  .weekly {
+  .weekly, .jacket-list {
     grid-template-columns: repeat(4, 1fr);
+    display: grid;
+    justify-items: center;
+  }
+}
+
+@media (min-width: 1600px) {
+  .weekly, .jacket-list {
+    grid-template-columns: repeat(6, 1fr);
     display: grid;
     justify-items: center;
   }
